# cpp-from-scratch

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  asan_leak_check.sh  build_and_debug.sh  build_and_run.sh  build_docker.sh  clang_clean_build.sh  clean_build.sh  cloud_run_hello.cc  compile_for_asan.sh  ctest.sh  gcloud.sh  instructions.txt  lldb_debug.sh  main.cpp  start_viewer.sh  test_geom.cpp  test_main.cpp  vcpkg.json
boost_explore/: boost_usage.cpp  boost_usage.hpp
cmake/local/: CMakeLists.txt
gcloud/: CMakeLists.txt  Dockerfile  gcloud.sh
geom_explore/: geom.cpp  geom.hpp  geomAPI_usage.cpp  geomAPI_usage.hpp  geom_display.cpp  geom_display.hpp  geom_nurbs.cpp  geom_nurbs.hpp
nr_explore/: gaussj.cpp  gaussj.hpp
std_explore/: std_usage.cpp  std_usage.hpp
viewer/: package-lock.json  package.json  viewer.html  viewer_cube_example.js  viewer_plot_data.js
viewer/public/output/: xyz_coordinates.json
